fixed margins and scrollbar. Added textAutoScroll when new msg runs.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,10 +9,21 @@ body {
   padding: 0;
   background-color: #eeeeee;
   font-family: 'Lexend';
+  overflow: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 0.5em;
+}
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background-color: gray;
 }
 
 .login-body {
-  background-image: url('../src/assets/purple.png'); 
+  background-image: url('../src/assets/purple.png');
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -23,14 +34,13 @@ body {
   align-items: center;
   height: 50vh;
   width: 40vh;
-  background-color: #F0E6DC;
+  background-color: #f0e6dc;
   border-radius: 10px;
   border: 1px solid black !important;
-
 }
 
 #custom-navbar {
-  background: #F0E6DC;
+  background: #f0e6dc;
   position: relative;
   height: 64px;
   width: 100%;
@@ -38,17 +48,16 @@ body {
 .hide-on-mobile {
   display: flex;
   align-items: start;
-  /* height: 100vh; */
   flex-direction: column;
   justify-content: space-between;
 }
 
 .info-bar {
-  background-color: #F0E6DC;
+  background-color: #f0e6dc;
   border-left: 2px solid black;
-   height: 100%;
-    padding: 1rem;
-    color: red;
+  height: 100%;
+  padding: 1rem;
+  color: red;
 }
 
 .message-item {
@@ -59,9 +68,8 @@ body {
 }
 
 .nopadding {
-  padding: 0!important;
+  padding: 0 !important;
 }
-
 
 @media screen and (min-width: 768px) {
   #offcanvasNavbar-expand-lg .justify-content-end.flex-grow-1.pe-3 > * {
@@ -71,33 +79,23 @@ body {
   }
   #fluid-desk {
     position: absolute;
-    /* max-width: 100%; */
-    /* padding-right: 0; */
-    /* padding-left: 0; */
-   /* top: 0; */
   }
-  #custom-navbar{
-    /* height: 100vh; */
+  #custom-navbar {
     padding: 0;
     margin: 0;
     display: flex;
-    /* justify-content: flex-start; */
-    /* align-items: center; */
-    
   }
   .chat-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: black; 
+    color: black;
     height: 100vh;
     width: 100%;
-    /* padding: 0; */
-    /* margin: 0; */
   }
 
-  #custom-navbar-nav{
+  #custom-navbar-nav {
     border-bottom: 1px solid black;
   }
 
@@ -106,11 +104,13 @@ body {
   }
 }
 
-
 @media (max-width: 768px) {
   .hide-on-mobile {
     opacity: 0;
     visibility: hidden;
+    display: none;
+  }
+  .info-bar {
     display: none;
   }
 
@@ -118,5 +118,7 @@ body {
     height: auto;
     padding: 1rem;
   }
+  #custom-navbar {
+   position: fixed;
+  }
 }
-
